# zero2prod

./: Cargo.toml  README.md  main_expanded.rs
.github/workflows/: audit-on-push.yml  general.yml
migrations/: 20220104224752_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: mod.rs
tests/: health_check.rs
